--- a/config/config.json
+++ b/config/config.json
@@ -1,24 +1,24 @@
 {
   "development": {
     "username": "root",
-    "password": "mpande88leo",
-    "database": "client_registry",
+    "password": "Mysql2019!",
+    "database": "nhcr_dev",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
   },
   "test": {
     "username": "root",
-    "password": "mpande88leo",
-    "database": "client_registry_test",
+    "password": "Mysql2019!",
+    "database": "nhcr_test",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
   },
   "production": {
     "username": "root",
-    "password": "mpande88leo",
-    "database": "client_registry_production",
+    "password": "Mysql2019!",
+    "database": "nhcr_production",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
